DiD S10: updated dialogue

--- a/data/campaigns/Descent_Into_Darkness/scenarios/10_Alone_at_Last.cfg
+++ b/data/campaigns/Descent_Into_Darkness/scenarios/10_Alone_at_Last.cfg
@@ -16,11 +16,15 @@
 
     [story]
         [part]
-            story= _ "As he enters the tunnel underneath Lord Karres’s manor, Darken Volk turns and, with a word and gesture causes the entrance to collapse. The two necromancers turn and begin walking down the pitch-black tunnel, temporarily safe from pursuit."
+            story= _ "As he enters the tunnel underneath Lord Karres’s manor, Darken Volk gestures and causes the entrance to collapse. The two necromancers turn and begin walking down the pitch-black tunnel, temporarily safe from pursuit."
             {STORYTXT_BACKGROUND travel.jpg}
         [/part]
         [part]
-            story= _ "They continue walking through the damp, cold air all through the morning and day, finally emerging as the last rays of sun sink below the horizon."
+            story= _ "Silence permeates the darkness, broken only by the irregular dripping of water from the musty cave walls. Malin looks toward Darken Volk occasionally, expecting something from the elder necromancer, but is met with stone-cold dispassion. There is no acknowledgement... no word of gratitude — only a sense of unease that has as much to do with the book as it does with Darken Volk."
+            {STORYTXT_BACKGROUND travel.jpg}
+        [/part]
+        [part]
+            story= _ "They continue walking through the damp, cold air all through the morning and day, finally emerging as the last rays of sunlight sink below the horizon."
             {STORYTXT_BACKGROUND travel.jpg}
         [/part]
     [/story]
@@ -218,12 +222,12 @@
 
         [message]
             speaker=Malin Keshar
-            message= _ "Well, we made it out. We got your precious book. What’s in it, anyway? And what do we do now?"
+            message= _ "Well, we got your precious book and made it out of Tath in one piece. What do we do now?"
         [/message]
 
         [message]
             speaker=Darken Volk
-            message= _ "‘We’? <i>We</i> do nothing. You are no longer my apprentice."
+            message= _ "‘We’? <i>We</i> do nothing."
         [/message]
 
         {MOVE_UNIT (id=Darken Volk) 7 21}
@@ -252,7 +256,7 @@
                 # DV already has book
                 [message]
                     speaker=Darken Volk
-                    message= _ "Now go your own way, and I will go mine."
+                    message= _ "Now go your own way and I will go mine."
                 [/message]
             [/else]
         [/if]
@@ -293,7 +297,7 @@
 
         [message]
             role=advisor
-            message= _ "He cares not about your noble quest to push back the orcs. He needed your help to fight the mages! The book is rightfully yours!"
+            message= _ "He cares not about your noble quest to push back the orcs. He needed your help to fight the mages!"
         [/message]
 
         [message]
@@ -303,7 +307,37 @@
 
         [message]
             speaker=Malin Keshar
-            message= _ "All of the training you gave me, that was just so I would help you get that book! Return it to me now, or I will take it by force."
+            message= _ "You used me! You knew the people of Parthyn would cast me out — you knew I had nobody else to turn to... you knew I would do whatever you said..."
+        [/message]
+
+        [message]
+            speaker=Malin Keshar
+            message= _ "... have I really just been a pawn all this time?"
+        [/message]
+
+        [message]
+            speaker=Malin Keshar
+            message= _ "Why don’t you say anything?! Don’t you care at all?!"
+        [/message]
+
+        [message]
+            speaker=Malin Keshar
+            message= _ "... you can’t abandon me too, not the way they did... father, Drogan, Dela... I have nothing left..."
+        [/message]
+
+        [message]
+            role=advisor
+            message= _ "He will not help you, but perhaps the book might. You were the one who helped him retrieve it; it is rightfully yours!"
+        [/message]
+
+        [message]
+            speaker=Malin Keshar
+            message= _ "Yes, perhaps... I suppose that is right..."
+        [/message]
+
+        [message]
+            speaker=Malin Keshar
+            message= _ "Darken Volk! That book is as much mine as it is yours! Give it back, or I will have to take it by force!"
         [/message]
 
         {MODIFY_UNIT (id=Darken Volk) facing sw}
@@ -380,17 +414,37 @@
 
         [message]
             speaker=Malin Keshar
-            message= _ "You let me believe Parthyn would accept me back so when they didn’t I would be willing to attack my own countrymen!"
+            message= _ "You let me believe Parthyn would accept me back, so when they didn’t, I would be willing to attack my own countrymen!"
         [/message]
 
         [message]
             speaker=Darken Volk
-            message= _ "What you let yourself believe is no fault of mine. Cease your foolish prattle. I gave you more power than you could have possibly dreamed. Use it to fight the orcs that annoy you so, not me."
+            message= _ "What you let yourself believe is no fault of mine. I gave you more power than you could have possibly dreamed. Use it to fight the orcs that annoy you so, not me."
         [/message]
 
         [message]
             speaker=Malin Keshar
-            message= _ "So it is true! You took my home away from me. You took Drogan away. Now that all of that is gone, I will at least keep the fruits of my labors."
+            message= _ "You took my home away from me. You took Drogan away. You turned my sister against me! You have ruined my life!"
+        [/message]
+
+        [message]
+            speaker=Darken Volk
+            message= _ "The only thing I have done is given you the power to achieve your own goals. The rest, you have done yourself."
+        [/message]
+
+        [message]
+            speaker=Malin Keshar
+            message= _ "That’s not true! You can’t abandon me like this!"
+        [/message]
+
+        [message]
+            speaker=Darken Volk
+            message= _ "Enough prattle from you, boy. Fighting the orcs is your want, not mine. You cannot expect me to help you in an endeavor that does not concern me at all."
+        [/message]
+
+        [message]
+            speaker=Malin Keshar
+            message= _ "The very same to you! I helped you retrieve that book! If you will not help me with my ambitions, I will at least keep the fruits of my labor."
         [/message]
 
         [message]
@@ -400,7 +454,7 @@
 
         [message]
             speaker=Malin Keshar
-            message= _ "Perhaps, but I have nothing left to lose."
+            message= _ "Perhaps... but I have nothing left to lose..."
         [/message]
     [/event]
 
@@ -420,7 +474,7 @@
 
         [message]
             speaker=Darken Volk
-            message= _ "Done? I have done nothing but give you an opportunity. You have chosen your own path. Now leave me alone!"
+            message= _ "Done? I have done nothing but give you an opportunity. What you choose to do with your life is not my business. Now leave me alone!"
         [/message]
     [/event]
 
@@ -477,17 +531,12 @@
 
         [message]
             speaker=Sir Cadaeus
-            message= _ "Your travels in this region have not gone unnoticed, foul necromancers! We have been tracking you for weeks, with our purpose renewed this morning upon hearing of the disaster you wreaked upon the goodly city of Tath."
-        [/message]
-
-        [message]
-            speaker=Sir Cadaeus
-            message= _ "Do not even think of running away — my horsemen can easily catch you. Yes, on this day you shall have to answer for your innumerable crimes."
+            message= _ "Your travels in this region have not gone unnoticed, necromancers! The disaster you wreaked upon the good city of Tath and the noble Lord Karres can only be paid back in turn with your blood and souls — whatever little may remain of them. Yes, on this day you shall have to answer for your innumerable crimes."
         [/message]
 
         [message]
             speaker=Darken Volk
-            message= _ "We’ll see how well your pompous words protect you from the blades of the undead once I have finished this upstart."
+            message= _ "Pompous words from an arrogant fool. We shall see how well you fare once I have finished this upstart."
         [/message]
     [/event]
 
@@ -588,17 +637,35 @@
 
         [message]
             speaker=Dela Keshar
-            message= _ "I told you, Malin, that I would find you again, and I have kept my word. I will not suffer you to bring any further harm to my people, and so you will not live to see another sunset."
+            message= _ "I finally found you, Malin! On this day, you will pay for what you have done to my people. I will not let you live to see another sunset."
         [/message]
 
         [message]
             speaker=Malin Keshar
-            message= _ "You wrong me, sister. I have only tried to help. Have you not seen fewer orcs this past summer?"
+            message= _ "... I suppose you did vow to kill me..."
         [/message]
 
         [message]
             speaker=Dela Keshar
-            message= _ "I will not listen to any more of your lies. Men, attack!"
+            message= _ "Did you not think I would keep my word? Attack him, men! Do not let the traitor escape!"
+        [/message]
+    [/event]
+
+# in case you do manage to defeat Dela
+    [event]
+        name=last breath
+        [filter]
+            id=Dela Keshar
+        [/filter]
+
+        [message]
+            speaker=Dela Keshar
+            message= _ "Vile fiend... I regret that I was... not strong enough... to destroy you..."
+        [/message]
+
+        [message]
+            speaker=Malin Keshar
+            message= _ "You brought this on yourself..."
         [/message]
     [/event]
 
@@ -609,13 +676,28 @@
         [/filter]
 
         [message]
+            speaker=Malin Keshar
+            message= _ "See? This is what happens when you abandon me!"
+        [/message]
+
+        [message]
             speaker=Darken Volk
-            message= _ "With my dying breath I curse you, Malin the Damned!"
+            message= _ "Ungrateful wretch, this is how you repay me? Curse you, Malin the Damned!"
+        [/message]
+
+        [kill]
+            id=Darken Volk
+            animate=yes
+        [/kill]
+
+        [message]
+            speaker=Malin Keshar
+            message= _ "I have already been cursed many times over. One more time is nothing..."
         [/message]
 
         [message]
             speaker=Malin Keshar
-            message= _ "Now I’ve just got to get that book off the battlefield!"
+            message= _ "Well, I suppose I should get that book off the battlefield."
         [/message]
 
         [objectives]
@@ -703,7 +785,7 @@
 
         [message]
             speaker=unit
-            message= _ "I am sorry, master, but that is too heavy for me."
+            message= _ "I am sorry, master, but this book is too heavy for me."
         [/message]
 
         [allow_undo][/allow_undo]
@@ -763,7 +845,22 @@
 
         [message]
             speaker=Malin Keshar
-            message= _ "The paladins will not be able to pursue me through the mountains, and Dela will not dare take the soldiers too far from Parthyn."
+            message= _ "The terrain is hazardous in these mountains. Neither the paladins nor Dela will be able to pursue me."
+        [/message]
+
+        [message]
+            speaker=Malin Keshar
+            message= _ "... then again, is there a point? Even should I escape, then what?"
+        [/message]
+
+        [message]
+            speaker=Malin Keshar
+            message= _ "Life, death... and unlife — at this point, I could accept any of them and nothing would change."
+        [/message]
+
+        [message]
+            speaker=Malin Keshar
+            message= _ "... but, I suppose giving up now would be a waste..."
         [/message]
 
         [endlevel]
