DiD S6: changed male_message to message

--- a/data/campaigns/Descent_Into_Darkness/scenarios/06_Return_to_Parthyn.cfg
+++ b/data/campaigns/Descent_Into_Darkness/scenarios/06_Return_to_Parthyn.cfg
@@ -468,7 +468,7 @@
 
                 [message]
                     speaker=unit
-                    male_message= _ "I joined Malin of my own free will! Drogan, you are a fool who would let the orcs slay us all simply because you do not understand the power that necromancy holds."
+                    message= _ "I joined Malin of my own free will! Drogan, you are a fool who would let the orcs slay us all simply because you do not understand the power that necromancy holds."
                     female_message= _ "female^I joined Malin of my own free will! Drogan, you are a fool who would let the orcs slay us all simply because you do not understand the power that necromancy holds."
                 [/message]
 
@@ -490,7 +490,7 @@
 
                 [message]
                     speaker=unit
-                    male_message= _ "I joined Malin of my own free will! Drogan was evil and the orcs would have overrun us if not for Malin's powers!"
+                    message= _ "I joined Malin of my own free will! Drogan was evil and the orcs would have overrun us if not for Malin's powers!"
                     female_message= _ "female^I joined Malin of my own free will! Drogan was evil and the orcs would have overrun us if not for Malin's powers!"
                 [/message]
 
