Lua API: Allow WML tags with leading underscore (#3877)
@gfgtdf said that it's more consistent to allow them across the board,
which IMHO is a strong enough argument for the API change in master.

--- a/data/test/scenarios/test_lua_wml_tagnames.cfg
+++ b/data/test/scenarios/test_lua_wml_tagnames.cfg
@@ -56,9 +56,15 @@
                     wml.tostring(table)
                 end))
 
-                -- Tag names can't start with underscores.
-                assert_equal(false, pcall(function()
+                -- Tag names can start with underscores.
+                assert_equal(true, pcall(function()
                     local table = {T._reserved {}}
+                    wml.tostring(table)
+                end))
+
+                -- An underscore by itself isn't allowed.
+                assert_equal(false, pcall(function()
+                    local table = {T._ {}}
                     wml.tostring(table)
                 end))
 
