DiD S10: dialogue adjustments

--- a/data/campaigns/Descent_Into_Darkness/scenarios/10_Alone_at_Last.cfg
+++ b/data/campaigns/Descent_Into_Darkness/scenarios/10_Alone_at_Last.cfg
@@ -332,7 +332,7 @@
 
         [message]
             speaker=Malin Keshar
-            message= _ "Yes, perhaps... I suppose that is right..."
+            message= _ "Yes, perhaps, I suppose that is right..."
         [/message]
 
         [message]
@@ -454,7 +454,7 @@
 
         [message]
             speaker=Malin Keshar
-            message= _ "Perhaps... but I have nothing left to lose..."
+            message= _ "Perhaps, but I have nothing left to lose..."
         [/message]
     [/event]
 
