DiD S4: added orc death dialogue

--- a/data/campaigns/Descent_Into_Darkness/scenarios/04_Beginning_of_the_Revenge.cfg
+++ b/data/campaigns/Descent_Into_Darkness/scenarios/04_Beginning_of_the_Revenge.cfg
@@ -227,6 +227,49 @@ end
     [/event]
 
     [event]
+        name=die
+        [filter]
+            id="Gron'r Hronk"
+        [/filter]
+
+        [filter_second]
+            side=1
+        [/filter_second]
+
+        [message]
+            speaker=Malin Keshar
+            message=_ "These orcs aren’t so strong after all!"
+        [/message]
+    [/event]
+
+    [event]
+        name=last breath
+        first_time_only=yes
+        [filter]
+            id="K'rrlar Oban"
+        [/filter]
+
+        [filter_second]
+            side=1
+        [/filter_second]
+
+        [message]
+            speaker="K'rrlar Oban"
+            message=_ "Wait, human! I may be of use to you! What is it that you desire? Slaves? Gold? Land? We do not have to be enemies!"
+        [/message]
+        [message]
+            speaker=Malin Keshar
+            message=_ "What I desire is your death."
+        [/message]
+
+        [kill]
+            id="K'rrlar Oban"
+            animate=yes
+            fire_event=yes
+        [/kill]
+    [/event]
+
+    [event]
         name=moveto
         [filter]
             side=1
