--- a/data/campaigns/Descent_Into_Darkness/scenarios/04_Beginning_of_the_Revenge.cfg
+++ b/data/campaigns/Descent_Into_Darkness/scenarios/04_Beginning_of_the_Revenge.cfg
@@ -4,11 +4,11 @@
     id=04_Beginning_of_the_Revenge
     name= _ "Beginning of the Revenge"
     map_data="{campaigns/Descent_Into_Darkness/maps/04_Beginning_of_the_Revenge.map}"
-    turns=36
+    {TURNS 28 26 24}
     next_scenario=05_Orc_War
     victory_when_enemies_defeated=yes
 
-    {DEFAULT_SCHEDULE_DUSK}
+    {DEFAULT_SCHEDULE}
 
     {SCENARIO_MUSIC       vengeful.ogg}
     {EXTRA_SCENARIO_MUSIC nunc_dimittis.ogg}
@@ -34,7 +34,7 @@
         side=1
         controller=human
         recruit=Walking Corpse,Vampire Bat,Ghost,Ghoul,Skeleton Archer,Skeleton
-        gold=140
+        {GOLD 130 120 110}
         team_name=good
         user_team_name= _ "Malin Keshar"
         {FLAG_VARIANT undead}
@@ -46,11 +46,14 @@
     [/side]
     # wmllint: validate-on
 
+    {STARTING_VILLAGES 1 5}
+
     [side]
         side=2
         controller=ai
         recruit=Orcish Archer,Orcish Crossbowman,Wolf Rider,Orcish Grunt
-        {GOLD 120 150 180}
+        {GOLD 30 45 60}
+        {INCOME 5 6 7}
         team_name=orcs
         user_team_name= _ "Orcs"
         {FLAG_VARIANT6 ragged}
@@ -71,13 +74,14 @@
         [/ai]
     [/side]
 
-    {STARTING_VILLAGES 2 8}
+    {STARTING_VILLAGES 2 5}
 
     [side]
         side=3
         controller=ai
-        recruit=Orcish Crossbowman,Wolf Rider,Goblin Pillager,Orcish Grunt
-        {GOLD 130 170 210}
+        recruit=Orcish Archer,Orcish Crossbowman,Wolf Rider,Goblin Pillager,Orcish Grunt
+        {GOLD 60 75 90}
+        {INCOME 3 4 5}
         team_name=orcs
         user_team_name= _ "Orcs"
         {FLAG_VARIANT6 ragged}
@@ -97,10 +101,10 @@
         [/ai]
     [/side]
 
-    {STARTING_VILLAGES 3 8}
+    {STARTING_VILLAGES 3 5}
 
     # Signpost at the end of the pass
-    {PLACE_IMAGE scenery/signpost.png 18 1}
+    {PLACE_IMAGE scenery/signpost.png 17 1}
 
     [event]
         name=prestart
@@ -139,33 +143,24 @@
 -- table needs to be VERY complete. Or, rename this to morph_terrain and
 -- have the conversion table come in as an argument, too.
 
-local locations = wesnoth.get_locations{terrain = 'Ce,Chr,Co,Gg,Gg^Efm,Gg^Vc,Gg^Vo,Gs^Fds,Gs^Fms,Gs^Fmw,Gs^Fp,Hh,Hh^Vhh,Hh^Vo,Ke,Khr,Ko,Mm,Mm^Xm'}
+local locations = wesnoth.get_locations{terrain = 'Gd,Gd^Es,Gd^Em,Gd^Fmw,Gd^Fdw,Hh,Hh^Fdw,Hh^Fmw,Mm,Mm^Xm'}
 
-local coverage = 0.15
--- Constant 15% random coverage.
+local coverage = 0.25
+-- Constant 25% random coverage.
 -- Valid range is (0.0 .. 1.0)
 -- Do not raise too high or player may not be able to make it in the time allotted.
 
 local snowNeeded = (#locations * coverage)
 
 local convert = {
-    ['Ce'] = 'Cea',
-    ['Chr'] = 'Cha',
-    ['Co'] = 'Coa',
-    ['Gg'] = 'Aa',
-    ['Gg^Efm'] = 'Aa',
-    ['Gg^Vc'] = 'Aa^Vca',
-    ['Gg^Vo'] = 'Aa^Voa',
-    ['Gs^Fds'] = 'Aa^Fda',
-    ['Gs^Fms'] = 'Aa^Fma',
-    ['Gs^Fmw'] = 'Aa^Fma',
-    ['Gs^Fp'] = 'Aa^Fpa',
+    ['Gd'] = 'Aa',
+    ['Gd^Es'] = 'Aa',
+    ['Gd^Em'] = 'Aa^Vca',
+    ['Gd^Fmw'] = 'Aa^Fma',
+    ['Gd^Fdw'] = 'Aa^Fpa',
     ['Hh'] = 'Ha',
-    ['Hh^Vhh'] = 'Ha^Vha',
-    ['Hh^Vo'] = 'Ha^Voa',
-    ['Ke'] = 'Kea',
-    ['Khr'] = 'Kha',
-    ['Ko'] = 'Koa',
+    ['Hh^Fdw'] = 'Ha^Fdw',
+    ['Hh^Fmw'] = 'Ha^Fmw',
     ['Mm'] = 'Ms',
     ['Mm^Xm'] = 'Ms^Xm'
 }
@@ -351,7 +346,7 @@ end
         name=moveto
         [filter]
             id=Malin Keshar
-            x,y=18,1
+            x,y=17,1
         [/filter]
 
         [endlevel]
