DiD S4: changed scenario name

--- a/data/campaigns/Descent_Into_Darkness/scenarios/04_Beginning_of_the_Revenge.cfg
+++ b/data/campaigns/Descent_Into_Darkness/scenarios/04_Beginning_of_the_Revenge.cfg
@@ -2,7 +2,7 @@
 
 [scenario]
     id=04_Beginning_of_the_Revenge
-    name= _ "Beginning of the Revenge"
+    name= _ "Outset of Vengeance"
     map_data="{campaigns/Descent_Into_Darkness/maps/04_Beginning_of_the_Revenge.map}"
     {TURNS 28 26 24}
     next_scenario=05_Orc_War
