THoT S8: Ulfserkers aren't masked

--- a/data/campaigns/The_Hammer_of_Thursagan/scenarios/08_Fear.cfg
+++ b/data/campaigns/The_Hammer_of_Thursagan/scenarios/08_Fear.cfg
@@ -39,14 +39,6 @@
         facing=ne
     [/side]
 
-#define MASKED_ULFSERKER X Y ID_STRING
-    [unit]
-        type=Dwarvish Ulfserker
-        x,y={X},{Y}
-        id={ID_STRING}
-        name= _ "Masked Dwarf"
-    [/unit]
-#enddef
     # wmllint: validate-on
 
     [side]
@@ -61,6 +53,8 @@
 
         type=Dwarvish Masked Steelclad
         id=Masked Dwarf Leader
+        # po: This is shown in the sidebar, it should be short.
+        # po: You could call them only Masked, to keep the term short.
         name= _ "Masked Dwarf"
         profile=portraits/maskeddwarf.png
         canrecruit=yes
@@ -71,14 +65,13 @@
         # We only want a limited number of these anyway, for flavor; they are
         # way too dangerous in swarms.  So we'll create them explicitly here.
 
-        {MASKED_ULFSERKER 38 12 Ulfserker1}
-        {MASKED_ULFSERKER 39 14 Ulfserker2}
-#ifdef NORMAL
-        {MASKED_ULFSERKER 40 12 Ulfserker3}
+        {UNIT () "Dwarvish Ulfserker" 8 12 generate_name=no}
+        {UNIT () "Dwarvish Ulfserker" 39 14 generate_name=no}
+#ifndef EASY
+        {UNIT () "Dwarvish Ulfserker" 40 12 generate_name=no}
 #endif
 #ifdef HARD
-        {MASKED_ULFSERKER 40 12 Ulfserker3}
-        {MASKED_ULFSERKER 39 12 Ulfserker4}
+        {UNIT () "Dwarvish Ulfserker" 39 12 generate_name=no}
 
         [unit]
             type=Dwarvish Masked Steelclad
@@ -394,5 +387,3 @@
     {HERODEATH_ANGARTHING}
     {HERODEATH_RATHELN}
 [/scenario]
-
-#undef MASKED_ULFSERKER
