DiD S6: rebalanced ai gold

--- a/data/campaigns/Descent_Into_Darkness/scenarios/06_Return_to_Parthyn.cfg
+++ b/data/campaigns/Descent_Into_Darkness/scenarios/06_Return_to_Parthyn.cfg
@@ -4,7 +4,7 @@
     id=06_Return_to_Parthyn
     name= _ "Return to Parthyn"
     map_data="{campaigns/Descent_Into_Darkness/maps/06_Return_to_Parthyn.map}"
-    turns=17
+    {TURNS 19 18 17}
     victory_when_enemies_defeated=no
     next_scenario=07_A_Small_Favor
 
@@ -118,7 +118,7 @@
         controller=ai
         recruit=Spearman,Bowman,Swordsman,Pikeman,Longbowman,Thug,Poacher,Footpad
         gold=15
-        {INCOME 5 10 15}
+        {INCOME 6 9 12}
         team_name=guardsmen
         user_team_name= _ "Defenders"
         {FLAG_VARIANT loyalist}
@@ -356,11 +356,11 @@
 
         [gold]
             side=4
-            {QUANTITY amount 40 50 60}
+            {QUANTITY amount 20 30 40}
         [/gold]
     [/event]
     [event]
-        name=turn 4
+        name=turn 5
 
         [gold]
             side=4
