--- a/data/campaigns/Descent_Into_Darkness/scenarios/05_Orc_War.cfg
+++ b/data/campaigns/Descent_Into_Darkness/scenarios/05_Orc_War.cfg
@@ -5,14 +5,14 @@
     name= _ "Orc War"
     map_data="{campaigns/Descent_Into_Darkness/maps/05_Orc_War.map}"
     victory_when_enemies_defeated=yes
-    turns=30
+    {TURNS 45 41 37}
     next_scenario=06_Return_to_Parthyn
 
     {DEFAULT_SCHEDULE_MORNING}
 
     {INTRO_AND_SCENARIO_MUSIC northerners.ogg battle.ogg}
-    {EXTRA_SCENARIO_MUSIC the_city_falls.ogg}
-    {EXTRA_SCENARIO_MUSIC the_dangerous_symphony.ogg}
+    {EXTRA_SCENARIO_MUSIC northern_mountains.ogg}
+    {EXTRA_SCENARIO_MUSIC siege_of_laurelmor.ogg}
 
     [story]
         [part]
@@ -36,7 +36,7 @@
         side=1
         controller=human
         recruit=Walking Corpse,Vampire Bat,Ghost,Ghoul,Skeleton Archer,Skeleton,Dark Adept DiD
-        gold=200
+        {GOLD 200 175 150}
         team_name=good
         user_team_name= _ "Malin Keshar"
         {FLAG_VARIANT undead}
@@ -52,7 +52,8 @@
         side=2
         controller=ai
         recruit=Goblin Spearman,Orcish Archer,Orcish Crossbowman,Wolf Rider,Orcish Grunt,Goblin Knight,Orcish Warrior,Troll Whelp
-        {GOLD 110 130 150}
+        {GOLD 70 80 90}
+        {INCOME 8 9 10}
         team_name=orcs
         user_team_name=_"Orcs"
         {FLAG_VARIANT6 ragged}
@@ -89,7 +90,8 @@
         side=3
         controller=ai
         recruit=Orcish Archer,Orcish Crossbowman,Goblin Pillager,Orcish Grunt,Orcish Assassin
-        {GOLD 110 130 150}
+        {GOLD 70 80 90}
+        {INCOME 8 9 10}
         team_name=orcs
         user_team_name= _ "Orcs"
         {FLAG_VARIANT6 ragged}
@@ -126,7 +128,8 @@
         side=4
         controller=ai
         recruit=Orcish Archer,Orcish Crossbowman,Troll Whelp,Wolf Rider,Orcish Grunt
-        {GOLD 110 130 150}
+        {GOLD 70 80 90}
+        {INCOME 8 9 10}
         team_name=orcs
         user_team_name= _ "Orcs"
         {FLAG_VARIANT6 ragged}
@@ -165,9 +168,9 @@
     [/label]
 
     {STARTING_VILLAGES 1 6}
-    {STARTING_VILLAGES 2 10}
-    {STARTING_VILLAGES 3 7}
-    {STARTING_VILLAGES 4 8}
+    {STARTING_VILLAGES 2 5}
+    {STARTING_VILLAGES 3 6}
+    {STARTING_VILLAGES 4 5}
 
     [event]
         name=prestart
@@ -265,20 +268,20 @@
             variable=remaining_orc_leader.side
             [case]
                 value=2
-                {VARIABLE escape_to_x 13}
+                {VARIABLE escape_to_x 11}
                 {VARIABLE escape_to_y 1}
             [/case]
 
             [case]
                 value=3
-                {VARIABLE escape_to_x 1}
-                {VARIABLE escape_to_y 31}
+                {VARIABLE escape_to_x 8}
+                {VARIABLE escape_to_y 26}
             [/case]
 
             [case]
                 value=4
                 {VARIABLE escape_to_x 40}
-                {VARIABLE escape_to_y 34}
+                {VARIABLE escape_to_y 7}
             [/case]
         [/switch]
 
