--- a/data/campaigns/The_Hammer_of_Thursagan/scenarios/12_The_Underlevels.cfg
+++ b/data/campaigns/The_Hammer_of_Thursagan/scenarios/12_The_Underlevels.cfg
@@ -297,7 +297,7 @@
 
         [message]
             speaker=Angarthing
-            message= _ "Mostly likely he has cloaked himself, thinking to run ahead to gather his followers. He could be within a spear-cast of us now and we wouldn’t know it in this gloom."
+            message= _ "Most likely he has cloaked himself, thinking to run ahead to gather his followers. He could be within a spear-cast of us now and we wouldn’t know it in this gloom."
         [/message]
 
         [sound]
@@ -444,7 +444,7 @@
                 [variable]
                     name=unit.id
                     equals=Angarthing
-                [/variable]            
+                [/variable]
             [/or]
             [then]
                 [message]
@@ -516,7 +516,7 @@
                 [variable]
                     name=unit.id
                     equals=Angarthing
-                [/variable]            
+                [/variable]
             [/or]
             [then]
                 [message]
@@ -608,7 +608,7 @@
             speaker=second_unit
             message= _ "You could not stop us before and you won't be stopping us now!"
         [/message]
-        
+
         # Activate side 3
         [gold]
             side=3
@@ -639,7 +639,7 @@
             speaker=Dufon
             message= _ "Fools! Even should you defeat me, the master's ritual will soon be complete and you shall all become his slaves!"
         [/message]
-        
+
         [gold]
             side=3
             amount={ON_DIFFICULTY 40 60 80}
