AToTB S3: fixed dialog line not being marked translatable
[ci skip]

--- a/data/campaigns/Two_Brothers/scenarios/03_Guarded_Castle.cfg
+++ b/data/campaigns/Two_Brothers/scenarios/03_Guarded_Castle.cfg
@@ -714,7 +714,7 @@ Yet for some reason I fear these brothers more. If Mordak were here it would be 
             [else]
                 [message]
                     speaker=Arvith
-                    message="It may be important, I best take it."
+                    message= _ "It may be important, I best take it."
                 [/message]
             [/else]
         [/if]
