SoF S8: fixup for schema validation

--- a/data/campaigns/The_Hammer_of_Thursagan/scenarios/08_Fear.cfg
+++ b/data/campaigns/The_Hammer_of_Thursagan/scenarios/08_Fear.cfg
@@ -65,13 +65,13 @@
         # We only want a limited number of these anyway, for flavor; they are
         # way too dangerous in swarms.  So we'll create them explicitly here.
 
-        {UNIT () "Dwarvish Ulfserker" 8 12 generate_name=no}
-        {UNIT () "Dwarvish Ulfserker" 39 14 generate_name=no}
+        {UNIT 2 "Dwarvish Ulfserker" 8 12 generate_name=no}
+        {UNIT 2 "Dwarvish Ulfserker" 39 14 generate_name=no}
 #ifndef EASY
-        {UNIT () "Dwarvish Ulfserker" 40 12 generate_name=no}
+        {UNIT 2 "Dwarvish Ulfserker" 40 12 generate_name=no}
 #endif
 #ifdef HARD
-        {UNIT () "Dwarvish Ulfserker" 39 12 generate_name=no}
+        {UNIT 2 "Dwarvish Ulfserker" 39 12 generate_name=no}
 
         [unit]
             type=Dwarvish Masked Steelclad
