VS projectfile update
[ci skip]

Adds libogg and libvorbis[-file] as dependencies, as required by #3851.

--- a/projectfiles/VC12/wesnoth.vcxproj.filters
+++ b/projectfiles/VC12/wesnoth.vcxproj.filters
@@ -3026,6 +3026,7 @@
     <ClInclude Include="..\..\src\desktop\windows_battery_info.hpp">
       <Filter>Desktop</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\src\utils\scope_exit.hpp" />
   </ItemGroup>
   <ItemGroup>
     <CustomBuild Include="..\..\src\tests\test_sdl_utils.hpp">
