codeblock: link to libogg, libvorbis and libvorbisfile
Required for pull request #3851 that was recently merged.

--- a/projectfiles/CodeBlocks/wesnoth.cbp
+++ b/projectfiles/CodeBlocks/wesnoth.cbp
@@ -80,7 +80,11 @@
 			<Add library="libcrypto-1_1" />
 			<Add library="winmm" />
 			<Add library="libole32" />
+			<Add library="libogg" />
 			<Add library="libuuid" />
+			<Add library="libvorbis" />
+			<Add library="libvorbisenc" />
+			<Add library="libvorbisfile" />
 			<Add directory="./" />
 		</Linker>
 		<Unit filename="../../packaging/windows/wesnoth.rc">
