TRoW S15: do not fire victory text upon hero death

--- a/data/campaigns/The_Rise_Of_Wesnoth/scenarios/15_A_New_Land.cfg
+++ b/data/campaigns/The_Rise_Of_Wesnoth/scenarios/15_A_New_Land.cfg
@@ -419,6 +419,11 @@
 
     [event]
         name=die
+        [filter]
+            [not]
+                id=Lady Jessene,Prince Haldric,Lord Typhon
+            [/not]
+        [/filter]
 
         [move_unit_fake]
             type=Elvish Shyde
