TRoW S17d: do not kill bats upon victory

--- a/data/campaigns/The_Rise_Of_Wesnoth/scenarios/17d_Cursed_Isle.cfg
+++ b/data/campaigns/The_Rise_Of_Wesnoth/scenarios/17d_Cursed_Isle.cfg
@@ -418,6 +418,7 @@
         {CLEAR_VARIABLE queen_awake}
         [kill]
             side=2,3
+            race=undead
             fire_event=no
         [/kill]
         [endlevel]
