TRoW S22: give cuttlefish loyal marker

--- a/data/campaigns/The_Rise_Of_Wesnoth/scenarios/22_The_Rise_of_Wesnoth.cfg
+++ b/data/campaigns/The_Rise_Of_Wesnoth/scenarios/22_The_Rise_of_Wesnoth.cfg
@@ -968,7 +968,7 @@
                     [modifications]
                         {TRAIT_LOYAL}
                     [/modifications]
-                    # Omitting {IS_LOYAL} deliberately
+                    {IS_LOYAL}
                 [/unit]
 
                 [message]
@@ -1097,7 +1097,7 @@
                     [modifications]
                         {TRAIT_LOYAL}
                     [/modifications]
-                    # Omitting {IS_LOYAL} deliberately
+                    {IS_LOYAL}
                 [/unit]
 
                 [message]
@@ -1226,7 +1226,7 @@
                     [modifications]
                         {TRAIT_LOYAL}
                     [/modifications]
-                    # Omitting {IS_LOYAL} deliberately
+                    {IS_LOYAL}
                 [/unit]
 
                 [scroll_to_unit]
