The South Guard: practicioners -> practitioners
[ci skip]

--- a/data/campaigns/The_South_Guard/utils/sg_help.cfg
+++ b/data/campaigns/The_South_Guard/utils/sg_help.cfg
@@ -134,7 +134,7 @@
             [message]
                 speaker=narrator
                 image="units/undead/zombie-attack-s.png~RC(magenta>red)"
-                message= _ "Walking corpses are usually used by weaker practicioners of the black arts, who pilfer dead bodies to practice their profane magic. Alone, they are slow and weak, although they can become dangerous in large groups. Any unit slain by a Walking Corpse will be plagued with undeath and become one as well."
+                message= _ "Walking corpses are usually used by weaker practitioners of the black arts, who pilfer dead bodies to practice their profane magic. Alone, they are slow and weak, although they can become dangerous in large groups. Any unit slain by a Walking Corpse will be plagued with undeath and become one as well."
             [/message]
         [/then]
     [/if]
