Elvish Archer: pasttime -> pastime
[ci skip]

--- a/data/core/units/elves/Archer.cfg
+++ b/data/core/units/elves/Archer.cfg
@@ -16,7 +16,7 @@
     advances_to=Elvish Ranger,Elvish Marksman
     cost=17
     usage=archer
-    description= _ "As primarily foragers and hunters, most elves learn to become proficient archers from a young age. Besides being only a practical skill, archery is also a common pasttime and many competitions are held in sport for the entertainment of spectators and participants alike. This ability is readily turned to battle in times of war, where many elves will wield bows as their weapons of choice. Though not as sturdy as their human or orc counterparts, Elvish archers are still effective combatants, especially when fighting from the safety of their forests."
+    description= _ "As primarily foragers and hunters, most elves learn to become proficient archers from a young age. Besides being only a practical skill, archery is also a common pastime and many competitions are held in sport for the entertainment of spectators and participants alike. This ability is readily turned to battle in times of war, where many elves will wield bows as their weapons of choice. Though not as sturdy as their human or orc counterparts, Elvish archers are still effective combatants, especially when fighting from the safety of their forests."
     die_sound={SOUND_LIST:ELF_HIT}
     [attack]
         name=sword
