Sceptre of Fire: northlands -> Northlands
As I understand it, there's a specific region of Wesnoth lore called Northlands: https://wiki.wesnoth.org/Geography_of_wesnoth#Northlands
As such, this dialogue should be capitalised to avoid confusion with a generic 'north lands'.

Also corrected a typo in a comment.

[ci skip]

--- a/data/campaigns/Sceptre_of_Fire/scenarios/7_Outriding_the_Outriders.cfg
+++ b/data/campaigns/Sceptre_of_Fire/scenarios/7_Outriding_the_Outriders.cfg
@@ -270,7 +270,7 @@
             [/else]
         [/if]
 
-        # Fire the event the next time with different dialoge
+        # Fire the event the next time with different dialog
         [event]
             name=die
             first_time_only=no
@@ -573,14 +573,14 @@
                 [message]
                     speaker=Alanin
                     # po: dragoon = his unit type
-                    message= _ "I’m a dragoon, with Haldric II’s personal bodyguard. I was sent on a mission in the northlands, and now elvish horsemen are chasing me. I barely evaded them."
+                    message= _ "I’m a dragoon, with Haldric II’s personal bodyguard. I was sent on a mission in the Northlands, and now elvish horsemen are chasing me. I barely evaded them."
                 [/message]
             [/then]
             [else]
                 [message]
                     speaker=Alanin
                     # po: cavalier = his unit type
-                    message= _ "I’m a cavalier, with Haldric II’s personal bodyguard. I was sent on a mission in the northlands, and now elvish horsemen are chasing me. I barely evaded them."
+                    message= _ "I’m a cavalier, with Haldric II’s personal bodyguard. I was sent on a mission in the Northlands, and now elvish horsemen are chasing me. I barely evaded them."
                 [/message]
             [/else]
         [/if]
