Secrets of the Ancient: Right click -> Right-click
Hyphenation consistency: everywhere else in the campaign it is hyphenated.

[ci skip]

--- a/data/campaigns/Secrets_of_the_Ancients/scenarios/02_Dark_Business.cfg
+++ b/data/campaigns/Secrets_of_the_Ancients/scenarios/02_Dark_Business.cfg
@@ -439,7 +439,7 @@ of Healing"
         [message]
             speaker=narrator
             image=$message_image
-            message= _ "Right click adjacent to your leader to summon the bat."
+            message= _ "Right-click adjacent to your leader to summon the bat."
         [/message]
         [clear_variable]
             name=message_image
